--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
     "message": "Navigiere, bediene und surfe schneller mit Mausgesten! Ein anpassbares Mausgesten-Add-on mit einer Vielzahl von verschiedenen Befehlen.",
-    "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
+    "description": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
     "message": "$NAME$ Add-on wurde aktualisiert!",
@@ -58,6 +58,18 @@
   "settingLabelMouseButtonMiddle": {
     "message": "Mitte",
     "description": "middle"
+  },
+  "settingLabelMatchingAlgorithm": {
+    "message": "Abgleich-Algorithmus",
+    "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmStrict": {
+    "message": "Strikt",
+    "description": "Strict"
+  },
+  "settingLabelMatchingAlgorithmShapeIndependent": {
+    "message": "Formunabhängig",
+    "description": "Shape-Independent"
   },
   "settingLabelTimeoutActive": {
     "message": "Aktiviere Inaktivitäts-Timeout",
@@ -147,6 +159,14 @@
     "message": "Erfasst eine neue Mausgeste, solange die Taste gedrückt gehalten wird.",
     "description": "Captures a new mouse gesture while the button is held down."
   },
+  "settingDescriptionMatchingAlgorithm": {
+    "message": "Legt fest, wie die Gesten verglichen werden, um die am besten passende Geste zu finden.",
+    "description": "Determines how the gestures are compared to find the best matching gesture."
+  },
+  "settingDescriptionMatchingAlgorithmLink": {
+    "message": "Hier erfahren Sie mehr über die Unterschiede",
+    "description": "Learn about the differences here"
+  },
   "settingDescriptionTimeoutActive": {
     "message": "Bricht die Geste ab, nachdem die Maus für die angegebene Zeit nicht bewegt wurde.",
     "description": "Cancels the gesture after the mouse has not been moved for the specified time."
@@ -160,8 +180,8 @@
     "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "Die minimale Mausbewegung, bis die Geste erkannt wird.",
-    "description": "The minimum mouse movement until the gesture gets recognised."
+    "message": "Die minimale Mausbewegung, bis der Beginn einer Geste erkannt wird.",
+    "description": "The minimum distance the mouse must be moved until the start of a gesture is recognized."
   },
   "settingDescriptionDeviationTolerance": {
     "message": "Die zulässige Gestenabweichung, die noch als Übereinstimmung erkannt werden soll.",
@@ -1180,8 +1200,8 @@
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
-    "message": "Der Zoom-Schritt in Prozent. Wenn es leer gelassen wird, werden die Standardzoomstufen verwendet.",
-    "description": "The zoom step in percentage. If left blank, the default zoom levels are used."
+    "message": "Der Zoom-Schritt oder mehrere durch Komma getrennte Ebenen in Prozent. Wenn sie weggelassen werden, werden die Standard-Zoomstufen von Gesturefy verwendet.",
+    "description": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used."
   },
   "commandSettingDescriptionScrollDuration": {
     "message": "Die Dauer in Millisekunden, die die Scoll-Animation einnehmen soll.",
@@ -1289,9 +1309,13 @@
     "message": "Suche",
     "description": "Search"
   },
-  "commandBarRequiredPermissionsText": {
-    "message": "Erforderliche Berechtigungen: ",
-    "description": "Required permissions: "
+  "commandBarAdditionalPermissionsText": {
+    "message": "Dieser Befehl erfordert zusätzliche Berechtigungen: ",
+    "description": "This command requires additional permissions: "
+  },
+  "commandBarAdditionalSettingsText": {
+    "message": "Dieser Befehl hat zusätzliche Einstellungen.",
+    "description": "This command has additional settings."
   },
   "gesturePopupTitleNewGesture": {
     "message": "Neue Geste",
