--- a/src/_locales/it_IT/messages.json
+++ b/src/_locales/it_IT/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
     "message": "Naviga più velocemente con i gesti del mouse! Un componente aggiuntivo del mouse personalizzabile con una varietà di comandi diversi.",
-    "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
+    "description": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
     "message": "Tillägget $NAME$ har uppdaterats!",
@@ -58,6 +58,18 @@
   "settingLabelMouseButtonMiddle": {
     "message": "centrale",
     "description": "middle"
+  },
+  "settingLabelMatchingAlgorithm": {
+    "message": "Algoritmo di corrispondenza",
+    "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmStrict": {
+    "message": "Rigoroso",
+    "description": "Strict"
+  },
+  "settingLabelMatchingAlgorithmShapeIndependent": {
+    "message": "Forma-Indipendente",
+    "description": "Shape-Independent"
   },
   "settingLabelTimeoutActive": {
     "message": "Attiva timeout inattività",
@@ -147,6 +159,14 @@
     "message": "Cattura un nuovo gesto del mouse mentre il pulsante è tenuto premuto.",
     "description": "Captures a new mouse gesture while the button is held down."
   },
+  "settingDescriptionMatchingAlgorithm": {
+    "message": "Determina come vengono confrontati i gesti per trovare il miglior gesto di corrispondenza.",
+    "description": "Determines how the gestures are compared to find the best matching gesture."
+  },
+  "settingDescriptionMatchingAlgorithmLink": {
+    "message": "Scopri qui le differenze",
+    "description": "Learn about the differences here"
+  },
   "settingDescriptionTimeoutActive": {
     "message": "Annulla il gesto dopo che il mouse non è stato spostato per il tempo specificato.",
     "description": "Cancels the gesture after the mouse has not been moved for the specified time."
@@ -160,8 +180,8 @@
     "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "Il movimento minimo del mouse finché il gesto non viene riconosciuto.",
-    "description": "The minimum mouse movement until the gesture gets recognised."
+    "message": "La distanza minima del mouse che deve essere spostata fino a quando non si riconosce l'inizio di un gesto.",
+    "description": "The minimum distance the mouse must be moved until the start of a gesture is recognized."
   },
   "settingDescriptionDeviationTolerance": {
     "message": "La deviazione del gesto ammissibile che dovrebbe essere ancora riconosciuta come una corrispondenza.",
@@ -1180,8 +1200,8 @@
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
-    "message": "Zoom in/out in percentuale. Se lasciato vuoto, vengono utilizzati i livelli di zoom predefiniti.",
-    "description": "The zoom step in percentage. If left blank, the default zoom levels are used."
+    "message": "Gli step di ingrandimento o più livelli separati da virgola in percentuale. Se omesso, vengono usati i livelli di zoom predefiniti di Gesturefy.",
+    "description": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used."
   },
   "commandSettingDescriptionScrollDuration": {
     "message": "La durata in millisecondi che l'animazione dello scroll deve avere.",
@@ -1289,9 +1309,13 @@
     "message": "Ricerca",
     "description": "Search"
   },
-  "commandBarRequiredPermissionsText": {
-    "message": "Autorizzazioni necessarie: ",
-    "description": "Required permissions: "
+  "commandBarAdditionalPermissionsText": {
+    "message": "Questo comando richiede permessi aggiuntivi: ",
+    "description": "This command requires additional permissions: "
+  },
+  "commandBarAdditionalSettingsText": {
+    "message": "Questo comando ha impostazioni aggiuntive.",
+    "description": "This command has additional settings."
   },
   "gesturePopupTitleNewGesture": {
     "message": "Nuovo Gesto",
