--- a/src/_locales/ro_RO/messages.json
+++ b/src/_locales/ro_RO/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
-    "message": "Navigează, operează și răsfoiește mai repede cu gesturi de mouse! Un supliment personalizabil pentu gesturi cu mouse-ul cu o varietate de comenzi.",
-    "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
+    "message": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands.",
+    "description": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
     "message": "Plugin-ul $NAME$ a fost actualizat!",
@@ -58,6 +58,18 @@
   "settingLabelMouseButtonMiddle": {
     "message": "mijloc",
     "description": "middle"
+  },
+  "settingLabelMatchingAlgorithm": {
+    "message": "Matching algorithm",
+    "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmStrict": {
+    "message": "Strict",
+    "description": "Strict"
+  },
+  "settingLabelMatchingAlgorithmShapeIndependent": {
+    "message": "Shape-Independent",
+    "description": "Shape-Independent"
   },
   "settingLabelTimeoutActive": {
     "message": "Activează modul de pauza de inactivitate",
@@ -147,6 +159,14 @@
     "message": "Captures a new mouse gesture while the button is held down.",
     "description": "Captures a new mouse gesture while the button is held down."
   },
+  "settingDescriptionMatchingAlgorithm": {
+    "message": "Determines how the gestures are compared to find the best matching gesture.",
+    "description": "Determines how the gestures are compared to find the best matching gesture."
+  },
+  "settingDescriptionMatchingAlgorithmLink": {
+    "message": "Learn about the differences here",
+    "description": "Learn about the differences here"
+  },
   "settingDescriptionTimeoutActive": {
     "message": "Anulează gestul după ce mouse-ul nu a fost mișcat un timp specificat.",
     "description": "Cancels the gesture after the mouse has not been moved for the specified time."
@@ -160,8 +180,8 @@
     "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "Mișcarea minimă a mouse-ului până la recunoașterea gestului.",
-    "description": "The minimum mouse movement until the gesture gets recognised."
+    "message": "The minimum distance the mouse must be moved until the start of a gesture is recognized.",
+    "description": "The minimum distance the mouse must be moved until the start of a gesture is recognized."
   },
   "settingDescriptionDeviationTolerance": {
     "message": "Abaterea admisibilă a gesturilor care ar trebui încă să fie recunoscută ca o potrivire.",
@@ -1180,8 +1200,8 @@
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
-    "message": "Pasul de mărire în procente. Dacă este lăsat necompletat, pașii impliciți vor fi folosiți.",
-    "description": "The zoom step in percentage. If left blank, the default zoom levels are used."
+    "message": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used.",
+    "description": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used."
   },
   "commandSettingDescriptionScrollDuration": {
     "message": "Durata în milisecunde a animaţiei de derulare.",
@@ -1289,9 +1309,13 @@
     "message": "Caută",
     "description": "Search"
   },
-  "commandBarRequiredPermissionsText": {
-    "message": "Permisiunile necesare: ",
-    "description": "Required permissions: "
+  "commandBarAdditionalPermissionsText": {
+    "message": "This command requires additional permissions: ",
+    "description": "This command requires additional permissions: "
+  },
+  "commandBarAdditionalSettingsText": {
+    "message": "This command has additional settings.",
+    "description": "This command has additional settings."
   },
   "gesturePopupTitleNewGesture": {
     "message": "Gest nou",
