--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
-    "message": "Навигация, управление и просмотр быстрее с помощью жестов мыши! Настраиваемое добавление жеста мыши с различными командами.",
-    "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
+    "message": "Навигация, управление и просмотр быстрее с помощью мыши! Дополнение, настраиваемое мышью, с различными командами.",
+    "description": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
     "message": "Расширение $NAME$ было обновлено!",
@@ -58,6 +58,18 @@
   "settingLabelMouseButtonMiddle": {
     "message": "Cредняя",
     "description": "middle"
+  },
+  "settingLabelMatchingAlgorithm": {
+    "message": "Алгоритм сопоставления",
+    "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmStrict": {
+    "message": "Строгий",
+    "description": "Strict"
+  },
+  "settingLabelMatchingAlgorithmShapeIndependent": {
+    "message": "Независимая форма",
+    "description": "Shape-Independent"
   },
   "settingLabelTimeoutActive": {
     "message": "Активировать таймаут простоя",
@@ -147,6 +159,14 @@
     "message": "Записывает новый жест мыши при удерживании кнопки.",
     "description": "Captures a new mouse gesture while the button is held down."
   },
+  "settingDescriptionMatchingAlgorithm": {
+    "message": "Определяет, как сравниваются жесты, чтобы найти наиболее подходящий жест.",
+    "description": "Determines how the gestures are compared to find the best matching gesture."
+  },
+  "settingDescriptionMatchingAlgorithmLink": {
+    "message": "Узнайте о различиях здесь",
+    "description": "Learn about the differences here"
+  },
   "settingDescriptionTimeoutActive": {
     "message": "Отменяет жест после того как мышь не была перемещена в течение заданного времени.",
     "description": "Cancels the gesture after the mouse has not been moved for the specified time."
@@ -160,8 +180,8 @@
     "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "Минимальное перемещение мыши до тех пор, пока жест не распознается.",
-    "description": "The minimum mouse movement until the gesture gets recognised."
+    "message": "Минимальное расстояние, на которое мышь должна быть перемещена до тех пор, пока не распознается начало жеста.",
+    "description": "The minimum distance the mouse must be moved until the start of a gesture is recognized."
   },
   "settingDescriptionDeviationTolerance": {
     "message": "Разрешаемое отклонение жеста, которое допускается при распознании.",
@@ -1180,8 +1200,8 @@
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
-    "message": "Шаг масштабирования в процентах. Если оставить поле пустым, будет использовано значение по умолчанию.",
-    "description": "The zoom step in percentage. If left blank, the default zoom levels are used."
+    "message": "Шаг масштаба или несколько уровней разделенных запятыми в процентах. Если не указано, используются уровни масштаба по умолчанию.",
+    "description": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used."
   },
   "commandSettingDescriptionScrollDuration": {
     "message": "Продолжительность анимации прокрутки в миллисекундах.",
@@ -1289,9 +1309,13 @@
     "message": "Поиск",
     "description": "Search"
   },
-  "commandBarRequiredPermissionsText": {
-    "message": "Необходимые разрешения: ",
-    "description": "Required permissions: "
+  "commandBarAdditionalPermissionsText": {
+    "message": "Эта команда требует дополнительных разрешений: ",
+    "description": "This command requires additional permissions: "
+  },
+  "commandBarAdditionalSettingsText": {
+    "message": "Эта команда содержит дополнительные настройки.",
+    "description": "This command has additional settings."
   },
   "gesturePopupTitleNewGesture": {
     "message": "Новый жест",
