--- a/src/_locales/sk_SK/messages.json
+++ b/src/_locales/sk_SK/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
-    "message": "Ovládajte váš internetový prehliadač efektívnejšie s gestami myši! Pomocou tohto doplnku si ich môžete prispôsobiť podľa vlastných predstáv.",
-    "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
+    "message": "Ovládajte váš internetový prehliadač efektívnejšie a rýchlejšie s gestami myši! Pomocou tohto doplnku si ich môžete prispôsobiť podľa vlastných predstáv.",
+    "description": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
     "message": "Rozšírenie $NAME$ bolo aktualizované!",
@@ -58,6 +58,18 @@
   "settingLabelMouseButtonMiddle": {
     "message": "Stredné",
     "description": "middle"
+  },
+  "settingLabelMatchingAlgorithm": {
+    "message": "Algoritmus párovania",
+    "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmStrict": {
+    "message": "Prísne",
+    "description": "Strict"
+  },
+  "settingLabelMatchingAlgorithmShapeIndependent": {
+    "message": "Shape-Independent",
+    "description": "Shape-Independent"
   },
   "settingLabelTimeoutActive": {
     "message": "Časový limit gesta",
@@ -147,6 +159,14 @@
     "message": "Pokým je stlačené tlačidlo, tak zachytí nové gesto myši.",
     "description": "Captures a new mouse gesture while the button is held down."
   },
+  "settingDescriptionMatchingAlgorithm": {
+    "message": "Určuje, ako sa porovnávajú gestá, aby bolo použité to najviac vyhovujúce gesto.",
+    "description": "Determines how the gestures are compared to find the best matching gesture."
+  },
+  "settingDescriptionMatchingAlgorithmLink": {
+    "message": "Ďalšie informácie o rozdieloch nájdete tu",
+    "description": "Learn about the differences here"
+  },
   "settingDescriptionTimeoutActive": {
     "message": "Gesto sa zruší, ak nebol zaregistrovaný žiadny ďalší pohyb myšou počas určenej doby.",
     "description": "Cancels the gesture after the mouse has not been moved for the specified time."
@@ -161,7 +181,7 @@
   },
   "settingDescriptionDistanceThreshold": {
     "message": "Minimálna vzdialenosť, ktorú musíte prejsť myšou, aby bolo gesto rozoznané.",
-    "description": "The minimum mouse movement until the gesture gets recognised."
+    "description": "The minimum distance the mouse must be moved until the start of a gesture is recognized."
   },
   "settingDescriptionDeviationTolerance": {
     "message": "Prípustná odchýlka gesta, ktorá by sa mala stále považovať za zhodu.",
@@ -1180,8 +1200,8 @@
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
-    "message": "Krok priblíženia/oddialenia je v percentách. Ak je hodnota prázdna, použije sa prednastavený krok priblíženia/oddialenia.",
-    "description": "The zoom step in percentage. If left blank, the default zoom levels are used."
+    "message": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used.",
+    "description": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used."
   },
   "commandSettingDescriptionScrollDuration": {
     "message": "Trvanie animácie posunu stránky v milisekundách.",
@@ -1289,9 +1309,13 @@
     "message": "Vyhľadať",
     "description": "Search"
   },
-  "commandBarRequiredPermissionsText": {
-    "message": "\nPožadované povolenia: ",
-    "description": "Required permissions: "
+  "commandBarAdditionalPermissionsText": {
+    "message": "Tento príkaz vyžaduje dodatočné povolenia: ",
+    "description": "This command requires additional permissions: "
+  },
+  "commandBarAdditionalSettingsText": {
+    "message": "Tento príkaz má dodatočné nastavenia.",
+    "description": "This command has additional settings."
   },
   "gesturePopupTitleNewGesture": {
     "message": "Nové gesto",
