--- a/src/_locales/sv_SE/messages.json
+++ b/src/_locales/sv_SE/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
     "message": "Navigera, manövrera och bläddra snabbare med musrörelser! Ett anpassningsbart musrörelsetillägg med en mängd olika kommandon.",
-    "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
+    "description": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
     "message": "Tillägget $NAME$ har uppdaterats!",
@@ -58,6 +58,18 @@
   "settingLabelMouseButtonMiddle": {
     "message": "mitten",
     "description": "middle"
+  },
+  "settingLabelMatchingAlgorithm": {
+    "message": "Matchande algoritm",
+    "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmStrict": {
+    "message": "Strikt",
+    "description": "Strict"
+  },
+  "settingLabelMatchingAlgorithmShapeIndependent": {
+    "message": "Formoberoende",
+    "description": "Shape-Independent"
   },
   "settingLabelTimeoutActive": {
     "message": "Aktivera vilopaus",
@@ -147,6 +159,14 @@
     "message": "Fångar en ny musrörelse medans knappen hålls nedtryckt.",
     "description": "Captures a new mouse gesture while the button is held down."
   },
+  "settingDescriptionMatchingAlgorithm": {
+    "message": "Bestämmer hur rörelser jämförs för att hitta den bästa matchande rörelsen.",
+    "description": "Determines how the gestures are compared to find the best matching gesture."
+  },
+  "settingDescriptionMatchingAlgorithmLink": {
+    "message": "Lär dig mer om skillnaderna här",
+    "description": "Learn about the differences here"
+  },
   "settingDescriptionTimeoutActive": {
     "message": "Avbryter rörelsen efter att musen inte har blivit flyttad på den angivna tiden.",
     "description": "Cancels the gesture after the mouse has not been moved for the specified time."
@@ -160,8 +180,8 @@
     "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "Minsta musrörelse tills rörelsen känns igen.",
-    "description": "The minimum mouse movement until the gesture gets recognised."
+    "message": "Minsta avstånd musen måste flyttas till början av en gest är igenkänd.",
+    "description": "The minimum distance the mouse must be moved until the start of a gesture is recognized."
   },
   "settingDescriptionDeviationTolerance": {
     "message": "Den tillåtna rörelseavvikelsen som fortfarande bör kännas igen som en match.",
@@ -1180,8 +1200,8 @@
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
-    "message": "Zoomsteg i procent. Om den lämnas tom kommer standard zoomvärde att användas.",
-    "description": "The zoom step in percentage. If left blank, the default zoom levels are used."
+    "message": "Zoomsteget eller flera kommaseparerade nivåer i procent. Om utelämnad används Gesturefys standard zoomnivåer.",
+    "description": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used."
   },
   "commandSettingDescriptionScrollDuration": {
     "message": "Varaktighet i millisekunder som bläddringsanimeringen borde ta.",
@@ -1289,9 +1309,13 @@
     "message": "Sök",
     "description": "Search"
   },
-  "commandBarRequiredPermissionsText": {
-    "message": "Behörigheter som krävs: ",
-    "description": "Required permissions: "
+  "commandBarAdditionalPermissionsText": {
+    "message": "Detta kommando kräver ytterligare behörigheter: ",
+    "description": "This command requires additional permissions: "
+  },
+  "commandBarAdditionalSettingsText": {
+    "message": "Detta kommando har ytterligare inställningar.",
+    "description": "This command has additional settings."
   },
   "gesturePopupTitleNewGesture": {
     "message": "Ny rörelse",
