--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
     "message": "滑鼠手勢使你的導航、操作、等瀏覽網路體驗更加快速流暢! 不只可自訂滑鼠手勢，還支援執行多種指令",
-    "description": "Navigate, operate and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
+    "description": "Navigate, operate, and browse faster with mouse gestures! A customizable mouse gesture add-on with a variety of different commands."
   },
   "addonUpdateNotificationTitle": {
     "message": "$NAME$ 已經完成更新！",
@@ -58,6 +58,18 @@
   "settingLabelMouseButtonMiddle": {
     "message": "中鍵",
     "description": "middle"
+  },
+  "settingLabelMatchingAlgorithm": {
+    "message": "比對演算法",
+    "description": "Matching algorithm"
+  },
+  "settingLabelMatchingAlgorithmStrict": {
+    "message": "嚴格",
+    "description": "Strict"
+  },
+  "settingLabelMatchingAlgorithmShapeIndependent": {
+    "message": "基於形狀",
+    "description": "Shape-Independent"
   },
   "settingLabelTimeoutActive": {
     "message": "閒置超時",
@@ -147,6 +159,14 @@
     "message": "當按住按鈕時，錄製新手勢",
     "description": "Captures a new mouse gesture while the button is held down."
   },
+  "settingDescriptionMatchingAlgorithm": {
+    "message": "決定新畫入的手勢該如何被比對到對應的手勢",
+    "description": "Determines how the gestures are compared to find the best matching gesture."
+  },
+  "settingDescriptionMatchingAlgorithmLink": {
+    "message": "在此了解其中的差異",
+    "description": "Learn about the differences here"
+  },
   "settingDescriptionTimeoutActive": {
     "message": "在滑鼠於一段指定的時間長度不移動後，取消手勢",
     "description": "Cancels the gesture after the mouse has not been moved for the specified time."
@@ -160,8 +180,8 @@
     "description": "Cancels the active gesture or prevents a new gesture from being triggered while the key is pressed."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "識別手勢所需的最小滑鼠移動距離",
-    "description": "The minimum mouse movement until the gesture gets recognised."
+    "message": "啟動識別手勢所需的最小滑鼠移動距離",
+    "description": "The minimum distance the mouse must be moved until the start of a gesture is recognized."
   },
   "settingDescriptionDeviationTolerance": {
     "message": "比對手勢時所能接受的誤差量",
@@ -1180,8 +1200,8 @@
     "description": "Determines if the cache should be reloaded or not."
   },
   "commandSettingDescriptionZoomStep": {
-    "message": "以百分比為單位的縮放步階，如果留白將使用預設的縮放級別",
-    "description": "The zoom step in percentage. If left blank, the default zoom levels are used."
+    "message": "縮放步階或多個以分號分隔的百分比。若為空，則Gesturefy將使用預設的縮放步階。",
+    "description": "The zoom step or multiple comma separated levels in percentage. If omitted, Gesturefy's default zoom levels are used."
   },
   "commandSettingDescriptionScrollDuration": {
     "message": "使用多少時間滑動到頁面頂部/底部，時間單位為毫秒",
@@ -1289,9 +1309,13 @@
     "message": "搜尋",
     "description": "Search"
   },
-  "commandBarRequiredPermissionsText": {
-    "message": "所需權限: ",
-    "description": "Required permissions: "
+  "commandBarAdditionalPermissionsText": {
+    "message": "這個指令需要額外的權限: ",
+    "description": "This command requires additional permissions: "
+  },
+  "commandBarAdditionalSettingsText": {
+    "message": "這個指令有附加的設定",
+    "description": "This command has additional settings."
   },
   "gesturePopupTitleNewGesture": {
     "message": "新手勢",
